--- a/src/templates/compact/index.html
+++ b/src/templates/compact/index.html
@@ -28,14 +28,14 @@
         <div class="main-grid">
             <div class="left-col">
                 {{#basics.summary}}
-                <section class="section">
+                <section class="section" data-section="basics">
                     <h3 class="section-title">Summary</h3>
                     <p class="summary">{{basics.summary}}</p>
                 </section>
                 {{/basics.summary}}
 
                 {{#work.length}}
-                <section class="section">
+                <section class="section" data-section="work">
                     <h3 class="section-title">Experience</h3>
                     {{#work}}
                     <div class="entry">
@@ -58,7 +58,7 @@
 
             <div class="right-col">
                 {{#skills.length}}
-                <section class="section">
+                <section class="section" data-section="skills">
                     <h3 class="section-title">Skills</h3>
                     <div class="skills-list">
                         {{#skills}}
@@ -69,7 +69,7 @@
                 {{/skills.length}}
 
                 {{#education.length}}
-                <section class="section">
+                <section class="section" data-section="education">
                     <h3 class="section-title">Education</h3>
                     {{#education}}
                     <div class="side-entry">
@@ -82,7 +82,7 @@
                 {{/education.length}}
 
                 {{#languages.length}}
-                <section class="section">
+                <section class="section" data-section="languages">
                     <h3 class="section-title">Languages</h3>
                     {{#languages}}
                     <div class="side-entry">
