--- a/src/templates/elegant/index.html
+++ b/src/templates/elegant/index.html
@@ -40,7 +40,7 @@
         </header>
 
         {{#basics.summary}}
-        <section class="section">
+        <section class="section" data-section="basics">
             <div class="section-header">
                 <span class="line"></span>
                 <h3 class="section-title">Profile</h3>
@@ -51,7 +51,7 @@
         {{/basics.summary}}
 
         {{#work.length}}
-        <section class="section">
+        <section class="section" data-section="work">
             <div class="section-header">
                 <span class="line"></span>
                 <h3 class="section-title">Experience</h3>
@@ -77,7 +77,7 @@
         {{/work.length}}
 
         {{#education.length}}
-        <section class="section">
+        <section class="section" data-section="education">
             <div class="section-header">
                 <span class="line"></span>
                 <h3 class="section-title">Education</h3>
@@ -93,7 +93,7 @@
         {{/education.length}}
 
         {{#skills.length}}
-        <section class="section">
+        <section class="section" data-section="skills">
             <div class="section-header">
                 <span class="line"></span>
                 <h3 class="section-title">Skills</h3>
